Agregando proyecto a GitHub

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
  
-    <title>Frases Cancion de Hielo y Fuego</title>
+    <title>Phrases from A Song of Ice and Fire  </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
